add feature work day
